fonts and colors

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
+$purple: #858AE3;
+$blue: #75C9C8;
+$yellow: #FF8FAB;
+$orange: #FFA62B;
 $green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$gray: #0F0326;
+$light-gray: #FFEEDD;
