added canvas and pixijs dependency

--- a/app/views/users/game.html.erb
+++ b/app/views/users/game.html.erb
@@ -1,1 +1,30 @@
-<h1>test</h1>
+<%# EXAMPLE %>
+<%# <div class="container"> %>
+    <%# <div class="icon" id="build-icon"></div>
+    <div class="menu" id="build-menu">
+        <div class="icon menu-item build-item" data-build-mode="remove">
+            <span>R</span>
+        </div>
+        <div class="icon menu-item build-item" data-build-mode="floor">
+            <span>F</span>
+        </div>
+        <!-- <div class="icon menu-item build-itemz" data-build-mode="wall">
+            <span>W</span>
+        </div> -->
+    </div>
+    <div class="icon" id="decorate-icon"></div>
+    <div class="menu" id="decorate-menu">
+        <div class="icon menu-item decorate-item" data-item-id="1">
+            <span>1</span>
+        </div>
+        <div class="icon menu-item decorate-item" data-item-id="2">
+            <span>2</span>
+        </div>
+        <div class="icon menu-item decorate-item" data-item-id="3">
+            <span>3</span>
+        </div>
+    </div>
+</div> %>
+<div data-controller="game">
+
+</div>
