prepared partial for all panels + did style for panel

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,8 @@
 // For example:
 $purple: #858AE3;
 $blue: #75C9C8;
-$yellow: #FF8FAB;
+$pink: #FF8FAB;
 $orange: #FFA62B;
 $green: #1EDD88;
-$gray: #0F0326;
-$light-gray: #FFEEDD;
+$darkpurple: #0F0326;
+$beige: #FFEEDD;
