--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -6,14 +6,14 @@
 // General style
 $font-family-sans-serif:  $body-font;
 $headings-font-family:    $headers-font;
-$body-bg:                 $light-gray;
+$body-bg:                 white;
 $font-size-base: 1rem;
 
 // Colors
-$body-color: $gray;
+$body-color: $darkpurple;
 $primary:    $blue;
 $success:    $green;
-$info:       $yellow;
+$info:       $pink;
 $danger:     $purple;
 $warning:    $orange;
 
