banner is beautiful

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#home</h1>
+<div class="banner">
+  <div class="banner-navbar">
+    <div class="navbar m-4">
+      <div class="logo">Virtual Work Buddy</div>
+      <a class="btn btn-blue" href="">Login</a>
+    </div>
+  </div>
+  <div class="banner-container">
+    <div class="slogan">Make homeoffice a happier place
+    </div>
+    <a class ="btn banner-btn" href="">
+    Meet your virtual work buddy
+    </a>
+  </div>
+</div>
+
 <p>Find me in app/views/pages/home.html.erb</p>
