--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,7 +5,7 @@
   background-color: #75C9C8;
 }
 
-.banner-btn {
+.btn-banner {
   text-decoration: none;
   font-size: 2rem;
   color: #0F0326;
@@ -13,7 +13,9 @@
   border-radius: 3rem;
   padding: 1.5rem;
   margin-bottom: 3rem;
-  &:hover {
+  padding-left: 3rem;
+  padding-right: 3rem;
+    &:hover {
     color:#FFA62B;
   }
 }
