homepage done with no links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
   <div class="banner">
     <div class="banner-navbar">
-      <div class="navbar m-4">
+      <div class="navbar">
         <div class="logo">Virtual Work Buddy</div>
         <a class="btn btn-blue" href="">Login</a>
       </div>
@@ -16,8 +16,8 @@
     </div>
   </div>
 
-  <div class="cards-container m-5" >
-    <div class="cards-title m-5">
+  <div class="cards-container" >
+    <div class="cards-title">
       <h2>Features</h2>
     </div>
 
