--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -22,6 +22,13 @@
   }
 }
 
+.cards-container {
+  margin: 5rem;
+  .card-title {
+    margin: 5rem;
+  }
+}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
