created front partials for clock / timer / input field

--- a/app/views/users/_timer_panel.html.erb
+++ b/app/views/users/_timer_panel.html.erb
@@ -1,2 +1,6 @@
 <div class="panel">
+<div class="input-field-short-pink">Type your input here</div>
+<div class="input-field-long-blue">Type your long input here</div>
+<div class="clock">04:30 pm</div>
+<div class="timer"><h2>01:37</h2><p>&ensp;55</p></div>
 </div>
