--- a/app/views/users/_tasks_panel.html.erb
+++ b/app/views/users/_tasks_panel.html.erb
@@ -1,2 +1,16 @@
-<div class="panel">
+<div class="panel task-panel">
+
+  <div class="card-task">
+    <div class="square-task">
+    </div>
+    <div class="card-task-infos">
+      <h2>Task</h2>
+      <p>Description</p>
+    </div>
+  </div>
+
+  <div class="footer-task" >
+    <a href="" class="btn-plus">+</a>
+  </div>
+
 </div>
