--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -23,3 +23,16 @@
 a {
   text-decoration: none;
 }
+
+.btn-plus {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: #0F0326;
+  background-color: $purple;
+  border-radius: 3rem;
+  padding: 0.3em 1em 0.4em 1em;
+  margin-bottom: center;
+    &:hover {
+    color: $beige;
+  }
+}
