--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -64,6 +64,7 @@ a {
   border-radius: 3rem;
   padding: 0.3em 1em 0.4em 1em;
   margin-bottom: center;
+  cursor: pointer;
     &:hover {
     color: $beige;
   }
