--- a/app/views/users/_tasks_panel.html.erb
+++ b/app/views/users/_tasks_panel.html.erb
@@ -1,20 +1,31 @@
 <div class="panel task-panel">
 
-  <div class="card-task">
-    <div class="square-task">
-    </div>
-    <div class="card-task-infos">
-      <h2>Task</h2>
-      <p>Description</p>
-    </div>
+  <div class="container-task">
+    <% if @tasks.empty?  %>
+      <div class="no-tasks"><h4>No task to do yet !</h4></div>
+    <% else %>
+      <% @tasks.each do |task| %>
+        <div class="card-task m-3">
+          <div class="card-task-infos">
+            <h2><%= task.title %></h2>
+            <p> <%= task.description %></p>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
   </div>
 
-  <%= simple_form_for [current_user, @task], html: {class: "d-none"} do |f| %>
-    <%= f.input :title %>
-    <%= f.input :descriptionn %>
-  <% end %>
 
-  <div class="footer-task" >
-    <a href="" class="btn-plus">+</a>
+
+  <div class="task-card" data-controller="create-task">
+    <%= simple_form_for [current_user, @task], html: {class: "d-none", data: {create_task_target: "form"}} do |f| %>
+      <%= f.input :title %>
+      <%= f.input :description %>
+      <%= f.submit %>
+    <% end %>
+
+    <div class="footer-task" >
+      <div class="btn-plus" data-action="click->create-task#displayForm">+</div>
+    </div>
   </div>
 </div>
