--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,9 +17,7 @@
     <div class="banner-container">
       <div class="slogan">Make homeoffice a happier place
       </div>
-      <a class ="btn btn-banner" href="">
-      Meet your virtual work buddy
-      </a>
+        <%= link_to "Meet your virtual work buddy", new_avatar_path, class: "btn btn-banner" %>
     </div>
   </div>
 
