--- a/app/views/users/_timer_panel.html.erb
+++ b/app/views/users/_timer_panel.html.erb
@@ -1,6 +1,45 @@
 <div class="panel">
-<div class="input-field-short-pink">Type your input here</div>
-<div class="input-field-long-blue">Type your long input here</div>
-<div class="clock">04:30 pm</div>
-<div class="timer"><h2>01:37</h2><p>&ensp;55</p></div>
+  <div class="timer-panel">
+    <h2 class="purple-timer-title">Timer 1</h2>
+    <div class="timer"><h2>01:37</h2><p>&ensp;55</p></div>
+
+    <div class="timer-buttons-panel">
+      <div class="timer-button">
+        <a href="" class="fa-solid fa-play"></a>
+      </div>
+      <div class="timer-button">
+        <a href="" class="fa-sharp fa-solid fa-pause"></a>
+      </div>
+      <div class="timer-button">
+        <a href="" class="fa-solid fa-circle-check"></a>
+      </div>
+    </div>
+
+    <div class="input-field-short-blue">Select an existing tag</div>
+    <div class="new-tag-field">
+      <div class="input-field-short-blue">Create a new tag</div>
+      <div class="small-btn-plus">+</div>
+    </div>
+<br><br>
+    <h2 class="purple-timer-title">Timer 2</h2>
+    <div class="timer"><h2>01:37</h2><p>&ensp;55</p></div>
+
+    <div class="timer-buttons-panel">
+      <div class="timer-button">
+        <a href="" class="fa-solid fa-play"></a>
+      </div>
+      <div class="timer-button">
+        <a href="" class="fa-sharp fa-solid fa-pause"></a>
+      </div>
+      <div class="timer-button">
+        <a href="" class="fa-solid fa-circle-check"></a>
+      </div>
+    </div>
+
+    <div class="input-field-short-blue">Select an existing tag</div>
+    <div class="new-tag-field">
+      <div class="input-field-short-blue">Create a new tag</div>
+      <div class="small-btn-plus">+</div>
+    </div>
+  </div>
 </div>
