port old prototype

--- a/app/views/users/game.html.erb
+++ b/app/views/users/game.html.erb
@@ -25,6 +25,6 @@
         </div>
     </div>
 </div> %>
-<div data-controller="game">
+<div data-controller="game" data-game-assets-value=<%= asset_path("spritesheet.png") %>>
 
 </div>
