--- a/app/views/users/_tasks_panel.html.erb
+++ b/app/views/users/_tasks_panel.html.erb
@@ -1,27 +1,12 @@
-<div class="panel task-panel">
+<div class="panel task-panel" data-controller="create-task">
 
-  <div class="container-task">
-    <% if @tasks.empty?  %>
-      <div class="no-tasks"><h4>No task to do yet !</h4></div>
-    <% else %>
-      <% @tasks.each do |task| %>
-        <div class="card-task m-3">
-          <div class="card-task-infos">
-            <h2><%= task.title %></h2>
-            <p> <%= task.description %></p>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
+  <%= render "task_list", tasks: @tasks %>
 
-
-
-  <div class="task-card" data-controller="create-task">
-    <%= simple_form_for [current_user, @task], html: {class: "d-none", data: {create_task_target: "form"}} do |f| %>
+  <div class="task-card" >
+    <%= simple_form_for [current_user, @task], html: {class: "d-none", data: {create_task_target: "form", action: "submit->create-task#create"}} do |f| %>
       <%= f.input :title %>
       <%= f.input :description %>
-      <%= f.submit %>
+      <%= f.submit class:"btn small-btn-blue create-btn" %>
     <% end %>
 
     <div class="footer-task" >
