--- a/app/views/users/_timer_panel.html.erb
+++ b/app/views/users/_timer_panel.html.erb
@@ -5,7 +5,7 @@
 
     <div class="timer-buttons-panel">
       <div class="timer-button">
-        <% if @timer.id %>
+        <% if @timer %>
           <%= link_to "", start_timer_path(@timer), class:"fa-solid fa-play" %>
         <% else %>
          <%= button_to "", create_timer_path, class:"skip-button-to-style fa-solid fa-play"%>
