timer back end partially done (feature to create the timer / display the timer when clicking start)

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex flex-row justify-content-around align-items-start p-2">
   <%= render "navbar" %>
   <%= render "tasks_panel" %>
-  <%= render "timer_panel" %>
+  <%= render "timer_panel", timer: @timers.last %>
 </div>
