refactored asset pipleline + early buddy AI

--- a/app/views/users/game.html.erb
+++ b/app/views/users/game.html.erb
@@ -25,6 +25,13 @@
         </div>
     </div>
 </div> %>
-<div data-controller="game" data-game-assets-value=<%= asset_path("spritesheet.png") %>>
+<div 
+    data-controller="game" 
+    data-game-tiles-value=<%= asset_path("tiles.png") %>
+    data-game-tiles-config-value=<%= asset_path("tiles.atlas") %>
+    data-game-items-value=<%= asset_path("items.png") %>
+    data-game-items-config-value=<%= asset_path("items.atlas") %>
+    data-game-characters-value=<%= asset_path("characters.png") %>
+    data-game-characters-config-value=<%= asset_path("characters.atlas") %>>
 
 </div>
