--- a/app/assets/stylesheets/components/_task.scss
+++ b/app/assets/stylesheets/components/_task.scss
@@ -1,11 +1,17 @@
 .card-task {
   overflow: hidden;
-  height: 6rem;
+  height: fit-content;
   background: white;
-  display: flex;
-  align-items: center;
   border-radius: 2em;
+  padding: 10px 20px;
+  .wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+  }
 }
+
 
 .card-task h2 {
   font-size: 16px;
@@ -47,4 +53,9 @@
 
 .task-panel {
   overflow-y: scroll;
+}
+
+.task-box {
+  display: flex;
+  align-items: center;
 }
