made show page working with stimulus

--- a/app/views/users/_navbar.html.erb
+++ b/app/views/users/_navbar.html.erb
@@ -1,14 +1,14 @@
 <div class="side-navbar">
   <div class="icon-list">
-    <a href="" class="fa-solid fa-list"></a>
+    <a href="" class="fa-solid fa-list" data-action="click->navbar#displayTasks"></a>
   </div>
   <div class="icon-clock">
-    <a href="" class="fa-sharp fa-solid fa-clock"></a>
+    <a href="" class="fa-sharp fa-solid fa-clock" data-action="click->navbar#displayTimers"></a>
   </div>
   <div class="icon-music">
-    <a href="" class="fa-solid fa-music"></a>
+    <a href="" class="fa-solid fa-music" data-action="click->navbar#displayMusic"></a>
   </div>
   <div class="icon-stat">
-    <a href="" class="fa-solid fa-chart-line"></a>
+    <a href="" class="fa-solid fa-chart-line" data-action="click->navbar#displayData"></a>
   </div>
 </div>
