--- a/app/views/users/_card_task.html.erb
+++ b/app/views/users/_card_task.html.erb
@@ -1,6 +1,6 @@
-<div class="card-task m-3" data-controller="edit-task" data-edit-task-id-value=<%= task.id %> data-edit-task-target="card">
+<div class="card-task m-3" data-controller="edit-task" data-edit-task-target="card">
   <div class="wrapper">
-    <div class="task-box">
+    <div class="task-box" >
       <label for="mark-as-done">
         <input type="checkbox" id="done" name="done" value="yes">
       </label>
@@ -11,7 +11,7 @@
     </div>
     <div class="buttons" >
       <button class="btn btn-outline-warning edit-btn" data-action='click->edit-task#toggleElement'>Edit</button>
-      <button class="btn btn-outline-warning delete-btn">Delete</button>
+      <button class="btn btn-outline-warning delete-btn" data-action='click->create-task#destroy' id=<%= task.id %> >Delete</button>
     </div>
   </div>
   <div class="inline-form hidden" data-edit-task-target="target">
