--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -59,3 +59,18 @@
     }
   }
 }
+
+.icon-param {
+  border: 1px solid $beige;
+  padding: 1.3em;
+  border-radius: 40%;
+  background-color: $beige;
+  margin-top: 17em;
+  .fa-solid {
+    &:hover {
+      color: $darkpurple;
+      background-color: $beige;
+      opacity: 1;
+    }
+  }
+}
