--- a/app/views/users/_navbar.html.erb
+++ b/app/views/users/_navbar.html.erb
@@ -11,4 +11,7 @@
   <div class="icon-stat">
     <a href="" class="fa-solid fa-chart-line" data-action="click->navbar#displayData"></a>
   </div>
+  <div class="icon-param">
+    <a href="" class="fa-solid fa-gear" data-action="click->navbar#displayData"></a>
+  </div>
 </div>
