--- a/app/views/users/_music_panel.html.erb
+++ b/app/views/users/_music_panel.html.erb
@@ -1,2 +1,5 @@
 <div class="panel">
+  <div class="card-spotify">
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/4QEB56HlcKUWcVn3g4xN51?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  </div>
 </div>
