--- a/app/views/users/_music_panel.html.erb
+++ b/app/views/users/_music_panel.html.erb
@@ -1,2 +1,42 @@
 <div class="panel">
+
+  <div class="music-panel-title">
+    <h2 style='color: #FFA62B'>Playlists</h2>
+  </div>
+
+  <%# <div class="music-panel-input">
+    <div class="input-field-music">Copy/Paste Spotify url</div>
+    <button class="btn btn-primary btn-music">+</button>
+  </div> %>
+
+  <%# <div class="card-spotify">
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E4CgUVQF0DGB1?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  </div> %>
+
+  <div class="container-youtube">
+
+    <div class="input-field-music">
+      <form >
+        <fieldset>
+          <h5 style="color: #75C9C8; margin-bottom:1em;">from Youtube</h5>
+          <input class="input-field-short-blue" type="url" name="url" style="width:350px" placeholder="" >
+          <input class="btn btn-primary" type="submit" value="Submit">
+        </fieldset>
+      </form>
+    </div>
+
+    <div class="card-youtube">
+      <iframe width="455" height="250" src="https://www.youtube.com/embed/zckn__oMXTk" title="Work From Home - chiLL Mix Playlist" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+  </div>
+
+  <div class="card-spotify my-5">
+    <h5 style="color: #75C9C8;">from Spotify</h5>
+    <div class="card-spotify m-4">
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E4CgUVQF0DGB1?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
+  </div>
+
+
 </div>
