--- a/app/views/users/_music_panel.html.erb
+++ b/app/views/users/_music_panel.html.erb
@@ -13,22 +13,21 @@
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E4CgUVQF0DGB1?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div> %>
 
-  <div class="container-youtube">
+  <div class="container-youtube" data-controller="music-panel">
 
     <div class="input-field-music">
-      <form >
+      <form data-action='submit->music-panel#launch'>
         <fieldset>
           <h5 style="color: #75C9C8; margin-bottom:1em;">from Youtube</h5>
-          <input class="input-field-short-blue" type="url" name="url" style="width:350px" placeholder="" >
+          <input class="input-field-short-blue" type="url" name="url" style="width:350px" placeholder="" data-music-panel-target="input" >
           <input class="btn btn-primary" type="submit" value="Submit">
         </fieldset>
       </form>
     </div>
 
     <div class="card-youtube">
-      <iframe width="455" height="250" src="https://www.youtube.com/embed/zckn__oMXTk" title="Work From Home - chiLL Mix Playlist" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="460" height="250" src="https://www.youtube.com/embed/_4kHxtiuML0" title="Work From Home - chiLL Mix Playlist" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen data-music-panel-target="iframe" ></iframe>
     </div>
-
   </div>
 
   <div class="card-spotify my-5">
@@ -37,6 +36,5 @@
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E4CgUVQF0DGB1?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
   </div>
-
 
 </div>
