--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -63,3 +63,10 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+
+.screen-youtube {
+    border: 1.4rem solid ;
+    border-color: $orange;
+    border-radius: 3rem;
+    background-color: $orange;
+}
