--- a/app/assets/stylesheets/components/_task.scss
+++ b/app/assets/stylesheets/components/_task.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
   height: fit-content;
   background: white;
-  border-radius: 2em;
+  border-radius: 10px;
   padding: 10px 20px;
   .wrapper {
     display: flex;
