--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -23,3 +23,8 @@ $border-radius-lg: 40px;
 $border-radius-sm: 40px;
 
 // Override other variables below!
+
+$form-check-input-border: 3px solid $orange;
+$form-check-input-border-radius: 4px;
+$form-check-input-width: 1.5em;
+$form-check-input-focus-box-shadow: 0 0 0 transparent;
