--- a/app/views/users/_music_panel.html.erb
+++ b/app/views/users/_music_panel.html.erb
@@ -19,14 +19,14 @@
       <form data-action='submit->music-panel#launch'>
         <fieldset>
           <h5 style="color: #75C9C8; margin-bottom:1em;">from Youtube</h5>
-          <input class="input-field-short-blue" type="url" name="url" style="width:350px" placeholder="" data-music-panel-target="input" >
-          <input class="btn btn-primary" type="submit" value="Submit">
+          <input class="input-field-url-music" type="url" name="url" style="width:350px" placeholder="" data-music-panel-target="input" >
+          <input class="btn btn-submit" type="submit" value="Play">
         </fieldset>
       </form>
     </div>
 
     <div class="card-youtube">
-      <iframe width="460" height="250" src="https://www.youtube.com/embed/_4kHxtiuML0" title="Work From Home - chiLL Mix Playlist" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen data-music-panel-target="iframe" ></iframe>
+      <iframe class="screen-youtube" width="460" height="250" src="https://www.youtube.com/embed/_4kHxtiuML0" title="Work From Home - chiLL Mix Playlist" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen data-music-panel-target="iframe" ></iframe>
     </div>
   </div>
 
