--- a/app/assets/stylesheets/components/_music.scss
+++ b/app/assets/stylesheets/components/_music.scss
@@ -29,8 +29,12 @@
   border-radius: 50px;
   font-weight: lighter;
   opacity: 0.6;
-  border-color: $orange;
+  border-color: $pink;
   text-align: center;
   width: 75%;
   margin: 0.625rem;
+  }
+
+  .music-panel-title{
+    color: $pink;
   }
