--- a/app/views/users/_music_panel.html.erb
+++ b/app/views/users/_music_panel.html.erb
@@ -1,7 +1,7 @@
 <div class="panel">
 
   <div class="music-panel-title">
-    <h2 style='color: #FFA62B'>Playlists</h2>
+    <h2>Playlists</h2>
   </div>
 
   <%# <div class="music-panel-input">
@@ -18,8 +18,8 @@
     <div class="input-field-music">
       <form data-action='submit->music-panel#launch'>
         <fieldset>
-          <h5 style="color: #75C9C8; margin-bottom:1em;">from Youtube</h5>
-          <input class="input-field-url-music" type="url" name="url" style="width:350px" placeholder="" data-music-panel-target="input" >
+          <h5 style="color: #FF8FAB; margin-bottom:1em;">Youtube</h5>
+          <input class="input-field-url-music" type="url" name="url" style="width:350px" placeholder="https://youtu.be/hShxsAlJmfw" data-music-panel-target="input" >
           <input class="btn btn-submit" type="submit" value="Play">
         </fieldset>
       </form>
@@ -31,7 +31,7 @@
   </div>
 
   <div class="card-spotify my-5">
-    <h5 style="color: #75C9C8;">from Spotify</h5>
+    <h5 style="color: #FF8FAB;">Spotify</h5>
     <div class="card-spotify m-4">
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E4CgUVQF0DGB1?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
