--- a/app/views/users/_data_panel.html.erb
+++ b/app/views/users/_data_panel.html.erb
@@ -1,2 +1,13 @@
-<div class="panel">
+<div class="panel" >
+  <div class="data-panel-title">
+    <h2>Today,</h2>
+    <br>
+    <h3>You worked ... </h3>
+    <br>
+    <div class="d-flex justify-content-center">
+      <div class="timer"><h2>07:37</h2><p>&ensp;55</p></div>
+    </div>
+    <br>
+    <h3 class="text-center">Congratulations!</h3>
+  </div>
 </div>
