--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -66,7 +66,7 @@
 
 .screen-youtube {
     border: 1.4rem solid ;
-    border-color: $orange;
+    border-color: $pink;
     border-radius: 3rem;
-    background-color: $orange;
+    background-color: $pink;
 }
