--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,5 @@
 <%- if controller_name != 'sessions' %>
-    <%= link_to "Log in", new_user_session_path(show: "log-in"), class: " btn small-btn-outline-blue mt-2" %><br />
+    <%= link_to "Log in", new_user_session_path, class: " btn small-btn-outline-blue mt-2" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
