--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,11 +5,13 @@
       <div class="navbar">
         <div class="logo">Virtual Work Buddy</div>
         <div class="homepage-buttons">
-        <%= link_to "Sign up", new_avatar_path, class: "btn btn-pink" %>
         <% if current_user %>
+          <%= link_to "Your Buddy", new_avatar_path(current_user), class: "btn btn-pink" if current_user.avatar == nil  %>
+          <%= link_to "Your Buddy", user_path(current_user), class: "btn btn-pink" if current_user.avatar %>
           <%= button_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-blue" %>
         <% else %>
-          <%= link_to "Login", new_user_session_path(show: "log-in"), class: "btn btn-blue" %>
+          <%= link_to "Sign up", new_user_registration_path, class: "btn btn-pink" %>
+          <%= link_to "Login", new_user_session_path, class: "btn btn-blue" %>
         <% end %>
         </div>
       </div>
@@ -17,7 +19,12 @@
     <div class="banner-container">
       <div class="slogan">Make homeoffice a happier place
       </div>
-        <%= link_to "Meet your virtual work buddy", new_avatar_path, class: "btn btn-banner" %>
+      <% if current_user %>
+        <%= link_to "Meet your virtual work buddy", new_avatar_path(current_user), class: "btn btn-banner" if current_user.avatar == nil %>
+        <%= link_to "Meet your virtual work buddy", user_path(current_user), class: "btn btn-banner" if current_user.avatar %>
+      <% else %>
+        <%= link_to "Meet your virtual work buddy", new_user_registration_path, class: "btn btn-banner" %>
+      <% end %>
     </div>
   </div>
 
