--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -70,3 +70,16 @@
     border-radius: 3rem;
     background-color: $pink;
 }
+
+.welcome-panel-card {
+  margin-top: 7px;
+  margin: 3rem;
+  height: 120px;
+  background: $orange;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  padding: 3px;
+  display: flex;
+  align-items: center;
+  border-radius: 1.5rem;
+
+}
