--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,31 @@
 <div class="d-flex flex-row justify-content-left align-items-start p-2 ui-overlay" data-controller="navbar">
+
   <%= render "navbar" %>
+
+  <div data-navbar-target="welcome" class="">
+    <%= render "welcome_panel" %>
+  </div>
+
   <div data-navbar-target="tasks" class="d-none">
     <%= render "tasks_panel" %>
   </div>
+
   <div data-navbar-target="timers" class="d-none">
     <%= render "timer_panel", timer: @timer %>
   </div>
+
   <div data-navbar-target="music" class="d-none">
     <%= render "music_panel" %>
   </div>
+
   <div data-navbar-target="data" class="d-none">
     <%= render "data_panel" %>
   </div>
+
    <div data-navbar-target="param" class="d-none">
     <%= render "param_panel" %>
   </div>
+
 </div>
 
 <div
