started feature to create label (partly done, missing confirmation message appearance /disapearance

--- a/app/views/users/_new_label.erb
+++ b/app/views/users/_new_label.erb
@@ -1,11 +1,11 @@
 
-<div class="new-tag-field">
-  <div class="input-field-short-blue">Create a new tag</div>
-  <div class="small-btn-plus">+</div>
-</div>
-
-<%# A FINIR %>
-   <%= simple_form_for [current_user, @label], html: {class: "d-none", data: {manage_labels_target: "labelform", action: "submit->manage-labels#create"}} do |f| %>
-      <%= f.input :name %>
-      <%= f.submit class:"btn small-btn-blue create-btn" %>
+<div>
+   <%= simple_form_for [current_user, @label], html: { data: {manage_labels_target: "labelform", action: "submit->manage-labels#create"}} do |f| %>
+      <div class="d-flex justify-content-around align-items-center mt-0">
+      <%= f.input :name, label: false, placeholder: 'type label name' %>
+      <%= f.submit "+", class:"btn small-btn-blue create-btn" %>
+      </div>
     <% end %>
+</div>
+<%# ADD CONFIRMATION WHEN LABEL IS CREATED %>
+<div data-manage-labels-target="creationconfirmation" class="d-none"><%= "Your label'#{@labels.last.name}' has been created!" %></div>
