added buddy needs, mood, and emotion display

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,12 +28,14 @@
 
 </div>
 
-<div
-    data-controller="game"
+<div 
+    data-controller="game" 
     data-game-tiles-value=<%= asset_path("tiles.png") %>
     data-game-tiles-config-value=<%= asset_path("tiles.atlas") %>
     data-game-items-value=<%= asset_path("items.png") %>
     data-game-items-config-value=<%= asset_path("items.atlas") %>
+    data-game-icons-value=<%= asset_path("icons.png") %>
+    data-game-icons-config-value=<%= asset_path("icons.atlas") %>
     data-game-characters-value=<%= asset_path("characters.png") %>
     data-game-characters-config-value=<%= asset_path("characters.atlas") %>>
 
