--- a/app/views/users/game.html.erb
+++ b/app/views/users/game.html.erb
@@ -31,6 +31,8 @@
     data-game-tiles-config-value=<%= asset_path("tiles.atlas") %>
     data-game-items-value=<%= asset_path("items.png") %>
     data-game-items-config-value=<%= asset_path("items.atlas") %>
+    data-game-icons-value=<%= asset_path("icons.png") %>
+    data-game-icons-config-value=<%= asset_path("icons.atlas") %>
     data-game-characters-value=<%= asset_path("characters.png") %>
     data-game-characters-config-value=<%= asset_path("characters.atlas") %>>
 
