--- a/app/assets/stylesheets/components/_timers.scss
+++ b/app/assets/stylesheets/components/_timers.scss
@@ -78,3 +78,17 @@
 .purple-timer-title {
   color: $blue;
 }
+
+#timer_label_id {
+  padding: 0.7rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #0F0326;
+  opacity: 0.65;
+  background-color: white;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 40px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
